--- a/mmunaf/index.html
+++ b/mmunaf/index.html
@@ -144,6 +144,7 @@
                     them unique and successful in their own way.
                 </p>
             </div>
+
             <div
                 class="projects"
                 data-aos="fade-up"
@@ -151,137 +152,123 @@
                 data-aos-delay="200"
                 data-aos-duration="800"
             >
-                <div
-                    class="projectTemplateBig proj1"
-                    data-aos="fade-up"
-                    onclick="window.open(
-                        'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                        '_blank' // <- This is what makes it open in a new window.
-                      );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">CookEasy</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Branding</p>
-                            <p>Mobile app</p>
-                        </div>
-                    </div>
-                </div>
-                <div
-                    class="projectTemplateSmall proj2"
-                    data-aos="fade-up"
-                    data-aos-delay="500"
-                    onclick="window.open(
-                    'https://muhammadmunaf.github.io/Dashnect/',
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        data-aos="fade-up"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">Dashnect</p>
-                        <div class="projectTemplateTags">
-                            <p>Web Development</p>
-                            <p>Web App</p>
+                    >
+                        <img
+                            src="Images/Projects/Cookeasy3.png"
+                            class="projectTemplatePicture"
+                            style="background-color: #1d1d1d"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p
+                                class="projectTemplateTitle"
+                                style="color: white"
+                            >
+                                CookEasy
+                            </p>
+                            <p
+                                class="projectTemplateSubText"
+                                style="color: white"
+                            >
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
-                </div>
 
-                <div
-                    class="projectTemplateSmall proj3"
-                    data-aos="fade-up"
-                    onclick="window.open(
-                    'https://www.behance.net/gallery/127384807/BellyFull-Food-Delivery-App-Design-Concept',
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        data-aos="fade-up"
+                        data-aos-delay="400"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">BellyFull</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Branding</p>
+                    >
+                        <img
+                            src="Images/Projects/Flex2.png"
+                            class="projectTemplatePicture"
+                            style="background-color: #f5f5f5"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">Flex</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div
-                    class="projectTemplateBig proj4"
-                    data-aos="fade-up"
-                    onclick="window.open(
-                    'https://www.behance.net/gallery/128820167/Python-Developer-Website-Design',
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        data-aos="fade-up"
+                        data-aos-delay="300"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">Aden</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Web Development</p>
-                            <p>Portfolio</p>
+                    >
+                        <img
+                            src="Images/Projects/aden1.png"
+                            class="projectTemplatePicture"
+                            style="background-color: #f5f5f5"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">Aden</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+                    <div
+                        class="projectTemplateNew"
+                        data-aos="fade-up"
+                        data-aos-delay="200"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/Projects/CrustPlay1.png"
+                            class="projectTemplatePicture"
+                            style="background-color: #1d1d1d"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p
+                                class="projectTemplateTitle"
+                                style="color: white"
+                            >
+                                CrustPlay
+                            </p>
+                            <p
+                                class="projectTemplateSubText"
+                                style="color: white"
+                            >
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="projectIndex">
-                <div class="col">
-                    <div class="projectTemplate">
-                        <img
-                            src="Images/Projects/aden.png"
-                            class="projectTemplateImg"
-                        />
-                        <p class="projectTemplateTitle">Aden</p>
-                        <p class="projectTemplateSubText">
-                            CookEasy - Is an app that lets users do this this
-                            and this
-                        </p>
-                        <a href="" class="projectTemplateButton">Coming Soon</a>
-                    </div>
 
-                    <div class="projectTemplate">
-                        <img
-                            src="Images/Projects/My_Municipality.png"
-                            class="projectTemplateImg"
-                        />
-                        <p class="projectTemplateTitle">My Municipality</p>
-                        <p class="projectTemplateSubText">
-                            CookEasy - Is an app that lets users do this this
-                            and this
-                        </p>
-                        <a href="" class="projectTemplateButton">Coming Soon</a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="projectTemplate">
-                        <img
-                            src="Images/Projects/CrustPlay.png"
-                            class="projectTemplateImg"
-                        />
-                        <p class="projectTemplateTitle">CrustPlay</p>
-                        <p class="projectTemplateSubText">
-                            CookEasy - Is an app that lets users do this this
-                            and this
-                        </p>
-                        <a href="" class="projectTemplateButton">Coming Soon</a>
-                    </div>
-
-                    <div class="projectTemplate">
-                        <img
-                            src="Images/Projects/Daastan_site.png"
-                            class="projectTemplateImg"
-                        />
-                        <p class="projectTemplateTitle">Daastan Website</p>
-                        <p class="projectTemplateSubText">
-                            CookEasy - Is an app that lets users do this this
-                            and this
-                        </p>
-                        <a href="" class="projectTemplateButton">Coming Soon</a>
-                    </div>
-                </div>
-            </div>
             <a
                 class="seeAllProjectsBtn"
                 href="projects.html"
                 data-aos="fade-up"
                 data-aos-duration="100"
                 data-aos-offset="100"
+                style="margin-top: 40px"
                 >See all projects <img src="Icons/arrow-right.svg" alt=""
             /></a>
         </section>
@@ -407,7 +394,7 @@
             </div>
         </section>
 
-        <footer data-aos="fade-up" data-aos-offset="50">
+        <footer>
             <div class="horizontalLine" style="background-color: #333b3d">
                 <hr style="color: #ffffff" />
             </div>
@@ -438,26 +425,5 @@
         </footer>
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script src="script.js"></script>
-
-        <!-- <script>
-            function navMenuControl() {
-                if (
-                    document.getElementById("mobileNavOptions").style.display ==
-                    "none"
-                ) {
-                    document.getElementById("mobileNavOptions").style.display =
-                        "flex";
-                    document
-                        .getElementById("navExpandBtn")
-                        .setAttribute("src", "Icons/cross.svg");
-                } else {
-                    document.getElementById("mobileNavOptions").style.display =
-                        "none";
-                    document
-                        .getElementById("navExpandBtn")
-                        .setAttribute("src", "Icons/menu.svg");
-                }
-            }
-        </script> -->
     </body>
 </html>
