--- a/mmunaf/projects.html
+++ b/mmunaf/projects.html
@@ -106,126 +106,278 @@
             data-aos-duration="600"
         >
             <div class="projectCatSelector">
-                <div class="catBtn current" onclick="openTab(event, 'UI/UX')">
+                <div class="catBtn current" onclick="openTab(event, 'Mobile')">
                     <p class="catBtnText">Mobile Apps</p>
                 </div>
-                <div class="catBtn" onclick="openTab(event, 'Mobile')">
+                <div class="catBtn" onclick="openTab(event, 'Webapps')">
                     <p class="catBtnText">Web Apps</p>
                 </div>
-                <div class="catBtn" onclick="openTab(event, 'Web')">
+                <div class="catBtn" onclick="openTab(event, 'Websites')">
                     <p class="catBtnText">Websites</p>
                 </div>
             </div>
 
             <div class="projectCatMobileSelector">
                 <select>
-                    <option value="" onclick="openTab(event, 'UI/UX')">
+                    <option value="" onclick="openTab(event, 'Mobile')">
                         Mobile Apps
                     </option>
-                    <option value="" onclick="openTab(event, 'Mobile')">
+                    <option value="" onclick="openTab(event, 'Webapps')">
                         Web Apps
                     </option>
-                    <option value="" onclick="openTab(event, 'Web')">
+                    <option value="" onclick="openTab(event, 'Websites')">
                         Websites
                     </option>
                 </select>
             </div>
 
-            <div class="projects tabcontent" id="UI/UX">
-                <div
-                    class="projectTemplateBig proj1"
-                    onclick="window.open(
-                        'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                        '_blank' // <- This is what makes it open in a new window.
-                      );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">CookEasy</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Branding</p>
-                            <p>Mobile app</p>
-                        </div>
-                    </div>
-                </div>
-                <div
-                    class="projectTemplateSmall proj2"
-                    onclick="window.open(
-                    'https://muhammadmunaf.github.io/Dashnect/',
+            <div class="projects tabcontent" id="Mobile">
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">Dashnect</p>
-                        <div class="projectTemplateTags">
-                            <p>Web Development</p>
-                            <p>Web App</p>
+                    >
+                        <img
+                            src="Images/proj3.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
-                </div>
 
-                <div
-                    class="projectTemplateSmall proj3"
-                    onclick="window.open(
-                    'https://www.behance.net/gallery/127384807/BellyFull-Food-Delivery-App-Design-Concept',
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">BellyFull</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Branding</p>
+                    >
+                        <img
+                            src="Images/proj2.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div
-                    class="projectTemplateBig proj4"
-                    onclick="window.open(
-                    'https://www.behance.net/gallery/128820167/Python-Developer-Website-Design',
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">Aden</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Web Development</p>
-                            <p>Portfolio</p>
+                    >
+                        <img
+                            src="Images/proj4.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj3.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="projects tabcontent" id="Mobile">
-                <div
-                    class="projectTemplateBig proj1"
-                    onclick="window.open(
-                        'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
-                        '_blank' // <- This is what makes it open in a new window.
-                      );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">CookEasy</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Branding</p>
-                            <p>Mobile app</p>
+            <div class="projects tabcontent" id="Webapps">
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj3.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj2.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div
-                    class="projectTemplateSmall proj3"
-                    onclick="window.open(
-                    'https://www.behance.net/gallery/127384807/BellyFull-Food-Delivery-App-Design-Concept',
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
                     '_blank' // <- This is what makes it open in a new window.
                   );"
-                >
-                    <div class="projectTemplateContent">
-                        <p class="projectTemplateTitle">BellyFull</p>
-                        <div class="projectTemplateTags">
-                            <p>UI/UX</p>
-                            <p>Branding</p>
+                    >
+                        <img
+                            src="Images/proj4.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj3.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="projects tabcontent" id="Websites">
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj3.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj2.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj4.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
+                        </div>
+                    </div>
+                    <div
+                        class="projectTemplateNew"
+                        style="position: relative"
+                        onclick="window.open(
+                    'https://www.behance.net/gallery/135357335/CookEasy-UX-Case-Study',
+                    '_blank' // <- This is what makes it open in a new window.
+                  );"
+                    >
+                        <img
+                            src="Images/proj3.png"
+                            class="projectTemplatePicture"
+                        />
+                        <div class="projectTemplateWritten">
+                            <p class="projectTemplateTitle">CookEasy</p>
+                            <p class="projectTemplateSubText">
+                                This is just a simple app
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -282,7 +434,7 @@
             </div>
         </section>
 
-        <footer data-aos="fade-up" data-aos-offset="50">
+        <footer>
             <div class="horizontalLine" style="background-color: #333b3d">
                 <hr style="color: #ffffff" />
             </div>
@@ -315,7 +467,10 @@
         <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script src="script.js"></script>
         <script>
-            document.getElementById("Mobile").style.display = "none";
+            tabcontent = document.getElementsByClassName("projects tabcontent");
+            tabcontent[1].style.display = "none";
+            tabcontent[2].style.display = "none";
+
             function navMenuControl() {
                 if (
                     document.getElementById("mobileNavOptions").style.display ==
