--- a/mmunaf/services.html
+++ b/mmunaf/services.html
@@ -253,7 +253,7 @@
             </div>
         </section>
 
-        <footer data-aos="fade-up" data-aos-offset="50">
+        <footer>
             <div class="horizontalLine" style="background-color: #333b3d">
                 <hr style="color: #ffffff" />
             </div>
